# Devoloping_RPC

./: .gitignore  README.md
Debug_MediumIssue/: CMakeLists.txt  Debug_10kV.C
Debug_MediumIssue_AvalMC/: AvalMC_Debug_10kV.C  AvalMC_addIons.C  CMakeLists.txt
Debug_Medium_PlotField/: Nebem_FieldPlot.C  Nebem_FieldPlot.root  ROOTPlot_Nebem_FieldPlot.root
Debug_Medium_PlotField/result_Field30cmx30cm/: PartitionedFieldPlot.root
Debug_Medium_PlotField/result_clock/: PartitionedFieldPlot.root
Debug_Medium_PlotField/result_clock_G1/: PartitionedFieldPlot.root
claude_workspace/: .gitignore
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/: AvalMC_PlotSignal.ipynb  AvalMC_addIons.C  CMakeLists.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/Result_AvalMC/: Signal.csv
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/result_cache/: signal_BottomGraphite.txt  signal_BottomReadout.txt  signal_TopGraphite.txt  signal_TopReadout.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/result_cache/.ipynb_checkpoints/: ReadTXtsignal-checkpoint.ipynb
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/result_cache_backup/root_file/: .PlotSignals.C.swp  ReadRoot.ipynb
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/result_cache_backup2/: CMakeCache.txt  signal_BottomGraphite.txt  signal_BottomReadout.txt  signal_TopGraphite.txt  signal_TopReadout.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry1/result_cache_backup2/.ipynb_checkpoints/: PlotTXTSignals_E_I_E&I-checkpoint.ipynb
claude_workspace/Debug_MediumIssue_AvalMC_Geometry2/: AvalMC_Debug_10kV.C  AvalMC_addIons.C  CMakeLists.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry2/.ipynb_checkpoints/: AvalMC_PlotSignal-checkpoint.ipynb  Untitled-checkpoint.ipynb
claude_workspace/Debug_MediumIssue_AvalMC_Geometry2/neBEMInp/: neBEMFastVol.inp
claude_workspace/Debug_MediumIssue_AvalMC_Geometry2/result_cache/: signal_BottomReadout.txt  signal_TopGraphite.txt  signal_TopReadout.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry2/result_cache_Friday/: CMakeCache.txt  signal_BottomGraphite.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry3/: AvalMC_addIons.C  Backup CMakeLists copy.txt  BackupAvalMC_addIons.C  CMakeLists.txt  GPU_AvalMC_PlotSignal.ipynb  STDdebug.C
claude_workspace/Debug_MediumIssue_AvalMC_Geometry3/result_cache/: signal_BottomGraphite.txt  signal_BottomReadout.txt  signal_TopGraphite.txt  signal_TopReadout.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry3/result_cache_Coefficients/: signal_BottomGraphite.txt  signal_BottomReadout.txt  signal_TopGraphite.txt  signal_TopReadout.txt
claude_workspace/Debug_MediumIssue_AvalMC_Geometry3_DielectricGraphite/: CMakeLists.txt
claude_workspace/Debug_Pure_AvalMC_Geometry3/: CMakeLists.txt  rpc_95.5_4.2_0.3.gas
claude_workspace/GPU_Debug_MediumIssue_AvalMC/: AvalMC_addIons.C  GPU_AvalMC_PlotSignal.ipynb  Signal_BottomGraphite.csv  Signal_BottomReadout.csv  Signal_TopGraphite.csv  Signal_TopReadout.csv
(+69 files in other folders)
